--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Biblioteca</a></li>
-                <li><a href="#">Entrar</a></li>
+                <li><a href="paginalogin.php">Entrar</a></li>
             </ul>
         </nav>
         </div>
